tests/ui/no_unit.stderr
error: At least one unit description must be given via attribute `unit`.

  = help: Use `#[unit(<ident>, "<symbol>", <si_prefix>, <scale>)]`
or  `#[unit(<ident>, "<symbol>", <scale>)]`
or  `#[unit(<ident>, "<symbol>")]`.

  --> tests/ui/no_unit.rs:13:1
   |
13 | #[quantity]
   | ^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)
